Fixed an issue where wallet key was using a default value in PaymentsModal.js instead of the env variable.
Added a QR code when an invoice is generated for scanning with personal wallets.

--- a/src/Components/PaymentsModal.css
+++ b/src/Components/PaymentsModal.css
@@ -25,4 +25,9 @@ form {
     cursor: pointer;
     text-align: end;
    }
-   
+
+   .QR {
+    height: auto;
+    max-width: 100%;
+    width: 100%;
+   }
