--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
 body {
-  background-color: #192734;
+  background-color: #4d4d4d;
   font-family: monospace;
  }
  
  header {
-  border-bottom: 2px solid #ffbf46;
+  border-bottom: 2px solid #c59439;
  }
  
  h1 {
   text-align: center;
-  color: #8a4fff;
+  color: #d4d4d4;
  }
  
  img {
@@ -18,7 +18,7 @@ body {
  }
  
  footer {
-  border-top: 2px solid #ffbf46;
+  border-top: 2px solid #c59439;
   padding: 1%;
   text-align: center;
   position: fixed;
@@ -28,12 +28,12 @@ body {
  }
  
  footer p {
-  color: #8a4fff;
+  color: #d4d4d4;
  }
  
  .balance-card {
-  background-color: #ffbf46;
-  border: 2px solid #8a4fff;
+  background-color: #c59439;
+  border: 2px solid #d4d4d4;
   padding: 1%;
   width: 25%;
   margin-top: 3%;
@@ -55,7 +55,7 @@ body {
  
  .row-item {
   background-color: ghostwhite;
-  border: 2px solid #8a4fff;
+  border: 2px solid #d4d4d4;
   border-radius: 5px;
   height: 300px;
   width: 40%;
