--- a/src/Components/Buttons.css
+++ b/src/Components/Buttons.css
@@ -12,8 +12,8 @@ label {
    }
    
    .button {
-    background-color: #ffbf46;
-    border: 2px solid #8a4fff;
+    background-color: #c59439;
+    border: 2px solid #4d4d4d;
     border-radius: 5px;
     padding: 5px;
     font-size: 1.2rem;
